--- a/src/index.css
+++ b/src/index.css
@@ -24,11 +24,20 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  text-align: center;
 }
 
 
 ul li {
   list-style-type: none;
+}
+
+.card {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 10px;
 }
 
 .container {
