--- a/src/index.css
+++ b/src/index.css
@@ -33,6 +33,21 @@ ul li {
   list-style-type: none;
 }
 
+input {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 20px;
+  width: 830px;
+  height: 20px;
+  font-size: 20px;
+  padding-left: 10px;
+}
+
+input:focus {
+  outline: none;
+}
+
 .card {
   display: flex;
   align-items: center;
