--- a/src/index.css
+++ b/src/index.css
@@ -14,13 +14,14 @@
 }
 
 
-body {
+/* body {
   display: flex;
   justify-content: center;
   height: 100vh;
   width: 80%;
   margin: 0 auto;
-}
+} */
+
 
 h1 {
   font-size: 3.2em;
@@ -33,21 +34,6 @@ ul li {
   list-style-type: none;
 }
 
-input {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: auto;
-  margin-top: 20px;
-  width: 430px;
-  height: 20px;
-  font-size: 20px;
-  padding-left: 10px;
-}
-
-input:focus {
-  outline: none;
-}
 
 .card {
   display: flex;
