--- a/src/index.css
+++ b/src/index.css
@@ -2,26 +2,20 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
   color-scheme: light dark;
   color: #fff;
   background-color: #102051;
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-
-/* body {
-  display: flex;
-  justify-content: center;
+body {
   height: 100vh;
   width: 80%;
   margin: 0 auto;
-} */
-
+} 
 
 h1 {
   font-size: 3.2em;
@@ -29,11 +23,9 @@ h1 {
   text-align: center;
 }
 
-
 ul li {
   list-style-type: none;
 }
-
 
 .card {
   display: flex;
@@ -42,7 +34,6 @@ ul li {
   flex-wrap: wrap;
   gap: 10px;
 }
-
 
 .list {
   background: #fff;
@@ -64,4 +55,12 @@ ul li {
   border-radius: 7px;
 }
 
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 50px;
+  margin-top: 50px;
+}
 
