--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,6 @@ body {
 
 h1 {
   font-size: 3.2em;
-  line-height: 1.1;
   text-align: center;
 }
 
@@ -32,7 +31,6 @@ ul li {
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-  gap: 10px;
 }
 
 .list {
@@ -62,5 +60,18 @@ ul li {
   flex-wrap: wrap;
   gap: 50px;
   margin-top: 50px;
+}
+
+.list-card {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.extended {
+  position: absolute;
+  z-index: 99;
+  width: 100%;
+  height: 100%;
 }
 
