--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@ body {
   height: 100vh;
   width: 80%;
   margin: 0 auto;
-} 
+}
 
 h1 {
   font-size: 3.2em;
@@ -51,6 +51,7 @@ ul li {
   justify-content: center;
   padding: 10px;
   border-radius: 7px;
+  margin: 0px !important;
 }
 
 .container {
@@ -64,7 +65,7 @@ ul li {
 
 .list-card {
   position: relative;
-  width: 100%;
+  width: 350px;
   height: 100%;
 }
 
@@ -73,5 +74,6 @@ ul li {
   z-index: 99;
   width: 100%;
   height: 100%;
+  margin: 0px;
+  padding-inline-start: 0px;
 }
-
